--- a/admin/app/views/spree/admin/gift_cards/index.csv.erb
+++ b/admin/app/views/spree/admin/gift_cards/index.csv.erb
@@ -18,5 +18,5 @@
     gift_card.display_state,
     gift_card.expires_at,
     gift_card.user&.email,
-    ]).strip.html_safe %>
+    ]).strip %>
 <%- end -%>
